--- a/content/news/2023/04/13/clojure-1-12-alpha2.adoc
+++ b/content/news/2023/04/13/clojure-1-12-alpha2.adoc
@@ -5,28 +5,35 @@ Alex Miller
 
 Clojure 1.12.0-alpha2 is now available and we encourage you to try it and give us your feedback!
 
-== Add libraries from the REPL
+== Add libraries for interactive use
 
 Libraries are added to the classpath only at JVM startup time, so adding a library requires restarting the JVM, which loses the current state of the REPL. There are many use cases for adding a library interactively during development or to patch a live system - speculative evaluation of a library, adding a known dependency and continuing your work, or adding a library to accomplish a specific task.
 
-New in this release is a namespace https://clojure.github.io/clojure/branch-master/clojure.repl.deps-api.html[clojure.repl.deps] with several new functions for use at the REPL. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-lib[add-lib] takes a lib that is not available on the classpath, and makes it available by downloading (if necessary) and adding to the classloader. Libs already on the classpath are not updated. If the coordinate is not provided, the newest Maven or git (if the library has an inferred git repo name) version or tag are used. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-libs[add-libs] is like `add-lib`, but resolves a set of libraries and versions together. https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/sync-deps[sync-deps] calls `add-libs` with any libs present in deps.edn, but not yet present on the classpath. This functionality is intended only for interactive use at the repl - using a deps.edn etc are still the proper way to build and maintain your code. To this end, these functions all check that https://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/%2Arepl%2A[pass:[*repl*]] is set to true, and that flag is bound automatically by `clojure.main/repl`.
+Clojure 1.12.0-alph2 adds https://clojure.github.io/clojure/branch-master/clojure.repl.deps-api.html[clojure.repl.deps] with new functions to add libraries interactively:
+
+* https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-lib[add-lib] takes a lib that is not available on the classpath, and makes it available by downloading (if necessary) and adding to the classloader. Libs already on the classpath are not updated. If the coordinate is not provided, the newest Maven or git (if the library has an inferred git repo name) version or tag are used.
+* https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/add-libs[add-libs] is like `add-lib`, but resolves a set of libraries and versions together. 
+* https://clojure.github.io/clojure/branch-master/clojure.repl.deps.html#clojure.repl.deps/sync-deps[sync-deps] calls `add-libs` with any libs present in deps.edn, but not yet present on the classpath.
+
+This namespace is intended only for interactive use at the repl - using a deps.edn etc is still the proper way to build and maintain your code. To this end, these functions all check that https://clojure.github.io/clojure/branch-master/clojure.core-api.html#clojure.core/%2Arepl%2A[pass:[*repl*]] is set to true (that flag is bound automatically by `clojure.main/repl`).
 
 In a clojure.main REPL, these new functions are automatically referred in the `user` namespace. In other repls, you may need to `(require '[clojure.repl.deps :refer :all])` before use.
 
-This functionality is backed by tools.deps and the Clojure CLI (which must be installed and available on your path). Dependency resolution is run in an external process so your application classpath is not affected by tools.deps and its dependency set. Some of this backing functionality is also now available as described below.
+Library resolution and download are provided by tools.deps. However, you do not want to add tools.deps and its many dependencies to your project classpath during development and thus we have also added a new api for invoking functions out of process via the Clojure CLI.
 
-== Invoke external functions via the Clojure CLI
+== Invoke tool functions out of process
 
-The Clojure CLI provides infrastructure to <<xref/../../../../../reference/deps_and_cli#running-a-tool,invoke functions in a tool>>, which runs these functions using a classpath separate from the project classpath. Tools are invoked with either a tool name or alias, the function, and args.
+<<xref/../../../../../reference/deps_and_cli#tool_install,Clojure CLI tools>> are collections of functions delivered in a library. Tool functions are invoked in their own process with a classpath independent from the project classpath.
 
-This release contains a new namespace https://clojure.github.io/clojure/branch-master/clojure.tools.deps.interop-api.html[clojure.tools.deps.interop] that encapsulates execution of an external tool function in https://clojure.github.io/clojure/branch-master/clojure.tools.deps.interop-api.html#clojure.tools.deps.interop/invoke-tool[invoke-tool], the same function used by `add-lib`.
+Clojure 1.12.0-alph2 includes  https://clojure.github.io/clojure/branch-master/clojure.tools.deps.interop-api.html[clojure.tools.deps.interop] with https://clojure.github.io/clojure/branch-master/clojure.tools.deps.interop-api.html#clojure.tools.deps.interop/invoke-tool[invoke-tool] to invoke a tool function out of process. Because the tool function runs out of process, its dependencies do not affect your REPL classpath.
 
-Find more about the function execution protocol on the <<xref/../../../../../reference/deps_and_cli#function_protocol,deps reference>>.
-
+To invoke a tool function, the tool must be defined as an alias in one of your deps.edn, or installed with local name. Find more about the function execution protocol on the <<xref/../../../../../reference/deps_and_cli#function_protocol,deps reference>>.
 
 == Start and control external processes
 
-Clojure has an existing `clojure.java.shell` namespace that was created in the early days of Clojure. Since then, Java has greatly expanded their APIs for process control and particularly I/O streams of those processes. This release adds a new namespace https://clojure.github.io/clojure/branch-master/clojure.java.process.html[clojure.java.process] that utilizes these APIs, in particular the https://clojure.github.io/clojure/branch-master/clojure.java.process.html#clojure.java.process/start[start] base function with full control, and the https://clojure.github.io/clojure/branch-master/clojure.java.process.html#clojure.java.process/exec[exec] function which covers the common case of executing an external process and returning its stdout on completion.
+Clojure has an existing `clojure.java.shell` namespace that was created in the early days of Clojure. Since then, Java has greatly expanded their APIs for process control and particularly I/O streams of those processes.
+
+This release adds https://clojure.github.io/clojure/branch-master/clojure.java.process.html[clojure.java.process] that utilizes these APIs, in particular the https://clojure.github.io/clojure/branch-master/clojure.java.process.html#clojure.java.process/start[start] base function with full control, and the https://clojure.github.io/clojure/branch-master/clojure.java.process.html#clojure.java.process/exec[exec] function which covers the common case of executing an external process and returning its stdout on completion.
 
 == Full list of changes
 
