Edit deref link
There were some audio issues with the previous video - have since re-uploaded a better version!

--- a/content/news/2023/04/14/deref.adoc
+++ b/content/news/2023/04/14/deref.adoc
@@ -16,7 +16,7 @@ We are also working on some additional Java interop features and bug fixes which
 == Podcasts and videos
 
 * https://clojure.stream/podcast[E90 Data Structures with Paula Gearon] - ClojureStream podcast
-* https://youtu.be/-1RI7aWWyaU[Maps, MIDI, Melodies - Cameron Desautels] - Clojure Asia
+* https://youtu.be/je7szzU4J0A[Maps, MIDI, Melodies - Cameron Desautels] - Clojure Asia
 * https://www.youtube.com/watch?v=uBTRLBU-83A[learning clojure w/ @lispyclouds] - teej_dv VODs
 * https://www.parens-of-the-dead.com/s2e22.html[The Re-Deceased] - Parens of the Dead
 
