--- a/content/news/2023/04/21/deref.adoc
+++ b/content/news/2023/04/21/deref.adoc
@@ -11,7 +11,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 What a week! I'm not sure if it seems busier because are we in the pre-Conj release crush or if I'm imagining it, but lots of stuff is happening (and I sense we aren't done with big announcements before Conj yet).
 
-Speaking of the https://2023.clojure-conj/org[Conj], it's next week! If you want to be there in person Apr 27-28 in Durham, NC or streaming online, ti.to/cognitect/clojureconj-2023[tickets are still available]. I can't wait to see all of you again for the first time in too long. Plus, a new Rich Hickey talk, wonder what that will include?
+Speaking of the https://2023.clojure-conj/org[Conj], it's next week! If you want to be there in person Apr 27-28 in Durham, NC or streaming online, https://ti.to/cognitect/clojureconj-2023[tickets are still available]. I can't wait to see all of you again for the first time in too long. Plus, a new Rich Hickey talk, wonder what that will include?
 
 And if you like in-person conferences but are in Europe, https://babashka.org/conf/[Babashka Conf] was announced this week for June 10th in Berlin! Maybe you'll bb there?
 
