--- a/content/news/2023/05/01/deref.adoc
+++ b/content/news/2023/05/01/deref.adoc
@@ -9,7 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Highlights
 
-We had a blast last week at https://2023.clojure-conj/org[Conj]! It was so good to see everyone in person and online. We hope to have videos edited and released to YouTube soon and you'll hear about it here of course.
+We had a blast last week at https://2023.clojure-conj.org[Conj]! It was so good to see everyone in person and online. We hope to have videos edited and released to YouTube soon and you'll hear about it here of course.
 
 Some of our team's big announcements last week are: https://blog.datomic.com/2023/04/datomic-is-free.html[Datomic is Free] and https://clojure.org/news/2023/04/28/introducing-morse[Introducing Morse]. More to come on both of these soon!
 
