--- a/content/news/2023/05/01/deref.adoc
+++ b/content/news/2023/05/01/deref.adoc
@@ -48,3 +48,6 @@ New releases and tools this week:
 * https://github.com/mjhika/babashka-dl[babashka-dl]  - simple install script for babashka on windows
 * https://github.com/cjbarre/multi-gpt[multi-gpt]  - A Clojure interface into the GPT API with advanced tools like conversational memory, task management, and more
 * https://github.com/generateme/fastmath[fastmath] 1.2.0 - Fast primitive based math library
+* https://github.com/babashka/instaparse-bb[instaparse-bb] 0.0.3 - Use instaparse from babashka!
+* https://github.com/babashka/babashka[babashka] 1.3.179 - Native, fast starting Clojure interpreter for scripting
+* https://github.com/borkdude/jet[jet] 0.5.25 - CLI to transform between JSON, EDN, YAML and Transit using Clojure
