--- a/content/news/2023/05/05/deref.adoc
+++ b/content/news/2023/05/05/deref.adoc
@@ -11,12 +11,12 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 All of the https://www.youtube.com/playlist?list=PLZdCLR02grLpIQQkyGLgIyt0eHE56aJqd[Clojure/conj 2023 videos] are now available.
 
-And if you want more conferencing, the https://babashka.org/conf/schedule.html[babashak-conf keynotes and schedule overview] is now available.
+And if you want more conferencing, the https://babashka.org/conf/schedule.html[babashka-conf keynotes and schedule overview] is now available.
 
 
 == Podcasts and videos
 
-* https://www.youtube.com/watch?v=_g_Kyl4_TSA&ab_channel=LondonClojurians[Software Development Leverage (by Tony Kay)] - Londong Clojurians
+* https://www.youtube.com/watch?v=_g_Kyl4_TSA&ab_channel=LondonClojurians[Software Development Leverage (by Tony Kay)] - London Clojurians
 * https://www.youtube.com/live/d-sjGfQRyHY?feature=share[Palestra: Clojure-lsp: um ferramenta de linter para tudo] - clojure-br
 * https://www.youtube.com/watch?v=LrqyNnNG478[edn files in Clojure] - Clojure Diary
 * https://www.youtube.com/watch?v=hYGvmtIa6sY[I built an EMACS Package to SAVE Clojure Commands] - Sammy Talks
