--- a/content/news/2023/05/19/deref.adoc
+++ b/content/news/2023/05/19/deref.adoc
@@ -24,7 +24,7 @@ As we approach about 2 years of doing the Deref, I think it has become a useful 
 * https://yogthos.net/posts/2023-05-12-nbb-resume.html[Making a Resume with Node.js Babashka (nbb)] - Dmitri Sotnikov 
 * https://building.nubank.com.br/clojure-conj-2023-highlights/[Clojure Conj 2023 Highlights] - Georgia Anunciação
 * https://dev.to/afucher/criando-variaveis-e-funcoes-em-clojure-4j9f[Criando variáveis e funções em Clojure] - Arthur Fücher
-* https://blog.agical.se/en/posts/changing-my-mind--converting-a-script-from-bash-to-babashka/[Changing my mind: Converting a script from bash to Babashka] - Peter Strömberg
+* link:++https://blog.agical.se/en/posts/changing-my-mind--converting-a-script-from-bash-to-babashka/++[Changing my mind: Converting a script from bash to Babashka] - Peter Strömberg
 * https://practical.li/engineering-playbook/continuous-integration/docker/[Docker - Practicalli Engineering Playbook] - Practicalli
 * https://blog.agical.se/en/posts/how-to-create-a-really-simple-clojureclr-dependency-tool/[How to create a really simple ClojureCLR dependency tool] - Peter Strömberg
 * https://scicloj.github.io/docs/community/groups/real-world-data/[real-world-data: a space to discuss your data and science projects in Clojure] - Sci Cloj
